kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-api-tester-service
  labels:
    app: external-api-tester
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: external-api-tester
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
